--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ navigation:
   url: /
 - text: About
   url: /about/
-- text: Style Guides
-  url: /style-guide/
+# - text: Style Guides
+#   url: /style-guide/
 - text: Archives
   url: /tags/
 
